Fix build with C++20

"erase" without namespace conflicts with std::erase, with the latter
taking precedence.

Amends 9929d3dd7332ae6509e53c60d60b7f053e7ec92f

Fixes: QTCREATORBUG-26386
Change-Id: I7fa64827ad61f1da262ce48082854975bc431c69
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>